WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
223924
Fix interpolation of box-shadow and text-shadow CSS properties
https://bugs.webkit.org/show_bug.cgi?id=223924
Summary
Fix interpolation of box-shadow and text-shadow CSS properties
Antoine Quint
Reported
2021-03-30 04:52:48 PDT
Fix interpolation of box-shadow and text-shadow CSS properties
Attachments
Patch
(70.11 KB, patch)
2021-03-30 04:56 PDT
,
Antoine Quint
dino
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Antoine Quint
Comment 1
2021-03-30 04:56:30 PDT
Created
attachment 424629
[details]
Patch
Dean Jackson
Comment 2
2021-03-30 12:42:19 PDT
Comment on
attachment 424629
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=424629&action=review
> Source/WebCore/animation/CSSPropertyAnimation.cpp:141 > + radius < 0 ? 0 : radius,
std::max(0, radius)?
Antoine Quint
Comment 3
2021-03-31 00:39:49 PDT
(In reply to Dean Jackson from
comment #2
)
> Comment on
attachment 424629
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=424629&action=review
> > > Source/WebCore/animation/CSSPropertyAnimation.cpp:141 > > + radius < 0 ? 0 : radius, > > std::max(0, radius)?
Will fix in commit.
Antoine Quint
Comment 4
2021-03-31 00:44:30 PDT
Committed
r275272
(
235957@main
): <
https://commits.webkit.org/235957@main
>
Radar WebKit Bug Importer
Comment 5
2021-03-31 00:45:19 PDT
<
rdar://problem/76042311
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug