Fix interpolation of box-shadow and text-shadow CSS properties https://bugs.webkit.org/show_bug.cgi?id=223924

Reviewed by Dean Jackson.

LayoutTests/imported/w3c:

Mark all interpolation tests for box-shadow and text-shadow as PASS results.

* web-platform-tests/css/css-backgrounds/animations/box-shadow-composition-expected.txt:
* web-platform-tests/css/css-backgrounds/animations/box-shadow-interpolation-expected.txt:
* web-platform-tests/css/css-transitions/animations/text-shadow-composition-expected.txt:
* web-platform-tests/css/css-transitions/animations/text-shadow-interpolation-expected.txt:

Source/WebCore:

There were three issues with interpolation of ShadowData-backed properties such
as box-shadow and text-shadow:

1. the blur radius should not be allowed to be negative,
2. blending LayoutUnit had accuracy issues,
3. we would allow interpolation to happen when items in lists did not have
   matching shadow styles ("inset" vs. unspecified).

* animation/CSSPropertyAnimation.cpp:
(WebCore::blendFunc):
* platform/animation/AnimationUtilities.h:
(WebCore::blend):

git-svn-id: https://svn.webkit.org/repository/webkit/trunk@275272 268f45cc-cd09-0410-ab3c-d52691b4dbfc
Canonical link: https://commits.webkit.org/235957@main